<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#ffffff"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/lonedev"
            android:textColor="#8A2BE2"
            android:textSize="48sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#ffffff"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/app_name"
            android:textColor="#8A2BE2"
            android:textSize="28sp"
            android:textStyle="italic"
            android:layout_marginBottom="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Clasificación de jugadores"
        android:textSize="24sp"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:fontFamily="@font/exo_2_bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gameButton"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/jugar"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:backgroundTint="#FF7518"
                    android:fontFamily="@font/exo_2_bold"
                    android:elevation="10dp" />

                <Button
                    android:id="@+id/historyButton"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:backgroundTint="#4B0082"
                    android:fontFamily="@font/exo_2_bold"
                    android:elevation="10dp" />
            </LinearLayout>

            <Button
                android:id="@+id/changeUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cambio_jugador"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:backgroundTint="#4B0082"
                android:fontFamily="@font/exo_2_bold"
                android:elevation="10dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
