<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Historial de Partidas"
        android:textSize="24sp"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/leaderboardButton"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/leaderboard"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:backgroundTint="#4B0082"
                android:fontFamily="@font/exo_2_bold"
                android:elevation="10dp" />

            <Button
                android:id="@+id/historyButton"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:backgroundTint="#4B0082"
                android:fontFamily="@font/exo_2_bold"
                android:elevation="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/changeUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambio_jugador"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:backgroundTint="#4B0082"
            android:fontFamily="@font/exo_2_bold"
            android:elevation="10dp" />
    </LinearLayout>
</LinearLayout>
